[package]
name = "uptime"
version = "0.0.1"
authors = ["Jihyeok Seo <me@limeburst.net>"]
description = "uptime(1)"
homepage = "https://github.com/limeburst/uptime-rust"
repository = "https://github.com/limeburst/uptime-rust"
readme = "README.md"
license = "MIT"

[dependencies]
time = "*"
utmp = "*"
